--- a/gradle.properties
+++ b/gradle.properties
@@ -2,47 +2,47 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=2.2.1
+version=1.21.3-2.3.0
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
 curseforge_id=917988
 
 # Common
-minecraft_version=1.21.1
+minecraft_version=1.21.3
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.21.1, 1.21.2)
+minecraft_version_range=[1.21.3, 1.21.4)
 
 # Vanilla
-neoform_version=1.21-20240613.152323
+neoform_version=1.21.3-20241023.131943
 parchment_mc_version=1.21
 parchment_version=2024.07.28
 
 # Fabric
-fabric_loader_version=0.15.11
-fabric_api_version=0.102.1
+fabric_loader_version=0.16.7
+fabric_api_version=0.107.0
 
 # NeoForge
-neoforge_version=21.1.8
+neoforge_version=21.3.4-beta
 neoforge_loader_range=[2,)
 
 # Forge
-forge_version=52.0.2
-forge_version_range=[52, 53)
+forge_version=53.0.4
+forge_version_range=[53, 54)
 
 # Dependencies
-resource_config_api=1.21-2.1.2
-resource_library=1.21.1-2.0.2
+resource_config_api=1.21-2.1.5
+resource_library=1.21.3-2.3.0
 
 # Runtime Mods
 emi_version=1.1.12+1.21
 jei_version=19.8.4.113
-mod_menu_version=11.0.1
+mod_menu_version=12.0.0-beta.1
 jade_version=15.1.5
 ae2_version=19.0.20-beta
 mekanism_version=10.6.7.54
