update to 1.21.3 only fabric is running

--- a/buildSrc/src/main/groovy/ml-loader.gradle
+++ b/buildSrc/src/main/groovy/ml-loader.gradle
@@ -5,6 +5,7 @@ plugins {
 
 dependencies {
     compileOnly(project(':common'))
+
 }
 
 tasks.named('compileJava', JavaCompile) {
@@ -17,5 +18,5 @@ tasks.named('javadoc', Javadoc) {
 
 processResources {
     from project(':common').sourceSets.main.resources
-    from file('src/generated/resources')
+    from file('src/generated')
 }
