--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     //modRuntimeOnly "teamreborn:energy:4.1.0"
 
     modRuntimeOnly "maven.modrinth:modmenu:${mod_menu_version}"
+    modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
     //modRuntimeOnly "maven.modrinth:emi:${emi_version}+fabric"
     //modRuntimeOnly "maven.modrinth:jade:${jade_version}+fabric"
 }
