--- a/gradle.properties
+++ b/gradle.properties
@@ -37,10 +37,11 @@ forge_version_range=[53, 54)
 
 # Dependencies
 resource_config_api=1.21-2.1.5
-resource_library=1.21.3-2.3.0
+resource_library=1.21.3-2.3.2
 
 # Runtime Mods
 emi_version=1.1.12+1.21
+rei_version=17.0.789
 jei_version=19.8.4.113
 mod_menu_version=12.0.0-beta.1
 jade_version=15.1.5
