project: bump versions

--- a/buildSrc/src/main/groovy/ml-loader.gradle
+++ b/buildSrc/src/main/groovy/ml-loader.gradle
@@ -17,5 +17,5 @@ tasks.named('javadoc', Javadoc) {
 
 processResources {
     from project(':common').sourceSets.main.resources
-    from file('src/generated/resources')
+    from file('src/generated')
 }
