--- a/gradle.properties
+++ b/gradle.properties
@@ -2,34 +2,34 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21.3-2.3.0
+version=1.21.4-2.3.1
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
 curseforge_id=917988
 
 # Common
-minecraft_version=1.21.3
+minecraft_version=1.21.4
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.21.3, 1.21.4)
+minecraft_version_range=[1.21.4, 1.21.5)
 
 # Vanilla
-neoform_version=1.21.3-20241023.131943
-parchment_mc_version=1.21
-parchment_version=2024.07.28
+neoform_version=1.21.4-20241203.161809
+parchment_mc_version=1.21.1
+parchment_version=2024.11.13
 
 # Fabric
+fabric_api_version=0.110.5
 fabric_loader_version=0.16.9
-fabric_api_version=0.108.0
 
 # NeoForge
-neoforge_version=21.3.30-beta
-neoforge_loader_range=[2,)
+neoforge_version=21.4.2-beta
+neoforge_loader_version_range=[2,)
 
 # Forge
 forge_version=53.0.19
@@ -37,13 +37,4 @@ forge_version_range=[53.0.19, 54)
 
 # Dependencies
 resource_config_api=1.21-2.1.5
-resource_library=1.21.3-2.3.2
-
-# Runtime Mods
-emi_version=1.1.12+1.21
-rei_version=17.0.789
-jei_version=19.8.4.113
-mod_menu_version=12.0.0-beta.1
-jade_version=15.1.5
-ae2_version=19.0.20-beta
-mekanism_version=10.6.7.54
+resource_library=1.21.4-2.3.3
