--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ fabric_loader_version=0.16.9
 
 # NeoForge
 neoforge_version=21.4.2-beta
-neoforge_loader_version_range=[2,)
+neoforge_loader_range=[2,)
 
 # Forge
 forge_version=53.0.19
