--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -33,7 +33,7 @@ loom {
             runDir("runs/server")
         }
         datagen {
-            inherit server
+            inherit client
             name "Fabric Datagen"
             vmArg "-Dfabric-api.datagen"
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated")}"
