project: move datagen for all loader to datagen sub module based on fabric

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,5 @@ eclipse
 */runs/client/*
 */runs/data/*
 !*/runs/client/options.txt
-!*/runs/client/config
-*/runs/client/config/*
-!*/runs/client/config/emi.css
 
-
-/fabric/src/generated/
-/neoforge/src/generated/
-/forge/src/generated/
+/common/src/generated/
