--- a/buildSrc/src/main/groovy/ml-loader.gradle
+++ b/buildSrc/src/main/groovy/ml-loader.gradle
@@ -18,5 +18,5 @@ tasks.named('javadoc', Javadoc) {
 
 processResources {
     from project(':common').sourceSets.main.resources
-    from file('src/generated')
+    from file('../common/src/generated')
 }
