--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21.3-2.3.0
+version=1.21.3-2.3.2
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
@@ -25,10 +25,10 @@ parchment_version=2024.07.28
 
 # Fabric
 fabric_loader_version=0.16.9
-fabric_api_version=0.108.0
+fabric_api_version=0.110.0
 
 # NeoForge
-neoforge_version=21.3.30-beta
+neoforge_version=21.3.58
 neoforge_loader_range=[2,)
 
 # Forge
@@ -37,7 +37,7 @@ forge_version_range=[53.0.19, 54)
 
 # Dependencies
 resource_config_api=1.21-2.1.5
-resource_library=1.21.3-2.3.2
+resource_library=1.21.3-2.3.5
 
 # Runtime Mods
 emi_version=1.1.12+1.21
