--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 plugins {
+    id 'idea'
     id 'fabric-loom' version '1.8-SNAPSHOT' apply false
     id 'net.neoforged.moddev' version '2.0.42-beta' apply false
     id 'net.minecraftforge.gradle' version '[6.0.25, 6.2)' apply false
     id "me.modmuss50.mod-publish-plugin" version "0.7.4"
+}
+
+idea {
+    module {
+        downloadSources = true
+        downloadJavadoc = true
+    }
 }
