--- a/gradle.properties
+++ b/gradle.properties
@@ -36,13 +36,10 @@ forge_version=52.0.28
 forge_version_range=[52, 53)
 
 # Dependencies
-resource_config_api=1.21-2.1.5
+resource_config_api=3.1.0
 resource_library=1.21.1-2.1.5
 
 # Runtime Mods
 emi_version=1.1.18+1.21.1
 jei_version=19.8.4.113
 mod_menu_version=11.0.1
-jade_version=15.1.5
-ae2_version=19.0.20-beta
-mekanism_version=10.6.7.54
