--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -26,7 +26,7 @@ minecraft {
 
     runs {
         client {
-            workingDirectory project.file('runs/client')
+            workingDirectory file('../common/runs/client')
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName 'Client'
             mods {
@@ -37,24 +37,12 @@ minecraft {
             }
         }
         server {
-            workingDirectory project.file('runs/server')
+            workingDirectory file('../common/runs/server')
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName "Server"
             args '--nogui'
             mods {
                 modServerRun {
-                    source sourceSets.main
-                    source project(":common").sourceSets.main
-                }
-            }
-        }
-        data {
-            workingDirectory project.file('runs/client')
-            ideaModule "${rootProject.name}.${project.name}.main"
-            args '--mod', mod_id, '--all', '--output', file('src/generated'), '--existing', project(':common').file("src/main/resources/").getAbsolutePath()
-            taskName 'Data'
-            mods {
-                modDataRun {
                     source sourceSets.main
                     source project(":common").sourceSets.main
                 }
