--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ plugins {
 // Change the rootProject Name to your repository/project folder name
 rootProject.name = "Resource-Cracker-1.21.1"
 include("common")
+include("datagen")
 include("fabric")
 include("forge")
 include("neoforge")
