--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21.3-2.3.2
+version=1.21.3-2.3.3
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
@@ -36,14 +36,7 @@ forge_version=53.0.19
 forge_version_range=[53.0.19, 54)
 
 # Dependencies
-resource_config_api=1.21-2.1.5
-resource_library=1.21.3-2.3.5
+resource_config_api=3.3.1
+resource_library=1.21.3-2.3.6
 
-# Runtime Mods
-emi_version=1.1.12+1.21
-rei_version=17.0.789
-jei_version=19.8.4.113
 mod_menu_version=12.0.0-beta.1
-jade_version=15.1.5
-ae2_version=19.0.20-beta
-mekanism_version=10.6.7.54
