--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21.4-2.3.4
+version=2.4.4
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
@@ -28,7 +28,7 @@ fabric_api_version=0.110.5
 fabric_loader_version=0.16.9
 
 # NeoForge
-neoforge_version=21.4.2-beta
+neoforge_version=21.4.47-beta
 neoforge_loader_range=[2,)
 
 # Forge
@@ -36,5 +36,5 @@ forge_version=54.0.1
 forge_version_range=[54, 55)
 
 # Dependencies
-resource_config_api=1.21-2.1.5
-resource_library=1.21.4-2.4.5
+resource_config_api=3.4.1
+resource_library=1.21.4-2.4.6
