adding missing recipes

--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 base {
-    archivesName = "$mod_id-$project.name"
+    archivesName = "$mod_id-$project.name-$minecraft_version"
 }
 
 java {
