--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=1.21.3-2.3.5
+version=2.3.8
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
